<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen android:title="@string/prefs_cat_login"
		android:summary="@string/prefs_cat_login_msg">
		<CheckBoxPreference android:title="@string/prefs_autologin"
			android:summary="@string/prefs_autologin_msg" android:key="@string/pref_key_autologin"></CheckBoxPreference>
		<EditTextPreference android:key="@string/pref_key_serverurl"
			android:title="@string/url"></EditTextPreference>
		<EditTextPreference android:title="@string/school"
			android:key="@string/pref_key_school"></EditTextPreference>
		<EditTextPreference android:title="@string/user"
			android:key="@string/pref_key_username"></EditTextPreference>
		<EditTextPreference android:title="@string/password"
			android:key="@string/pref_key_password" android:password="true"></EditTextPreference>
		<Preference android:key="@string/pref_key_presets"
		android:title="@string/prefs_presets" android:summary="@string/prefs_presets_msg"></Preference>

	</PreferenceScreen>
	<PreferenceScreen android:title="@string/prefs_cat_viewstuff"
		android:summary="@string/prefs_cat_viewstuff_msg">
		<CheckBoxPreference android:title="@string/prefs_autochoose"
			android:summary="@string/prefs_autochoose_msg" android:key="@string/pref_key_autochoose"></CheckBoxPreference>
		<ListPreference android:title="@string/prefs_views"
			android:summary="@string/prefs_views_msg" android:entryValues="@array/views_values"
			android:entries="@array/views" android:key="@string/pref_key_schoolview"></ListPreference>
		<ListPreference android:title="@string/prefs_viewtypes"
			android:summary="@string/prefs_viewtypes_msg" android:entries="@array/viewTypes"
			android:key="@string/pref_key_viewtype"></ListPreference>
		<ListPreference android:title="@string/prefs_viewvalues"
			android:summary="@string/prefs_viewvalues_msg" android:key="@string/pref_key_selection"></ListPreference>
		<CheckBoxPreference android:summaryOn="@string/prefs_show_saturday_msg_on"
			android:key="@string/pref_key_show_saturday" android:summaryOff="@string/prefs_show_saturday_msg_off"
			android:title="@string/prefs_show_saturday"></CheckBoxPreference>
		<CheckBoxPreference android:summaryOn="@string/prefs_show_dates_msg_on"
			android:key="@string/pref_key_show_header_dates" android:summaryOff="@string/prefs_show_dates_msg_off"
			android:title="@string/prefs_show_dates"></CheckBoxPreference>
		<CheckBoxPreference android:key="@string/pref_key_show_header_daynames"
			android:summaryOn="@string/prefs_show_daynames_msg_on"
			android:summaryOff="@string/prefs_show_daynames_msg_off"
			android:title="@string/prefs_show_daynames"></CheckBoxPreference>
		<CheckBoxPreference android:key="@string/pref_key_show_timegrid"
			android:summaryOn="@string/prefs_show_timegrid_msg_on" android:title="@string/prefs_show_timegrid"
			android:summaryOff="@string/prefs_show_timegrid_msg_off"></CheckBoxPreference>
		<CheckBoxPreference android:key="@string/pref_key_show_zerohour"
			android:summaryOff="@string/prefs_show_zerohour_msg_off"
			android:summaryOn="@string/prefs_show_zerohour_msg_on" android:title="@string/prefs_show_zerohour"></CheckBoxPreference>
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/prefs_cat_colorstuff"
		android:summary="@string/prefs_cat_colorstuff_msg">
		<Preference android:key="@string/pref_key_color_bg"
			android:title="@string/prefs_color_bg"></Preference>
		<Preference android:key="@string/pref_key_color_touch"
			android:title="@string/prefs_color_touch"></Preference>

		<Preference android:key="@string/pref_key_color_border"
			android:title="@string/prefs_color_border"></Preference>
		<Preference android:key="@string/pref_key_color_header"
			android:title="@string/prefs_color_header"></Preference>
		<Preference android:key="@string/pref_key_color_reset"
			android:title="@string/prefs_color_reset"></Preference>
	</PreferenceScreen>
	<Preference android:key="@string/pref_key_resync"
		android:title="@string/prefs_resync" android:summary="@string/prefs_resync_msg"></Preference>
</PreferenceScreen>
