<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/add_date_scrollview"
android:layout_width="fill_parent" android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
android:id="@+id/presetLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center"
>
<Spinner
android:id="@+id/presetsDd"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
>
</Spinner>
<TextView
android:id="@+id/presetTitleLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/title"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/presetTitleInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
>
</EditText>
<TextView
android:id="@+id/presetURLLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/url"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/presetURLInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_url"
>
</EditText>
<TextView
android:id="@+id/presetSchoolLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/school"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/presetSchoolInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_school"
>
</EditText>
<TextView
android:id="@+id/presetUserLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/user"
android:layout_centerHorizontal="true"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/presetUserInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_user"
>
</EditText>
<TextView
android:id="@+id/presetPasswordLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/password"
android:layout_centerHorizontal="true"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/presetPasswordInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:password="true"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_password"
>
</EditText>

<Button
android:id="@+id/presetButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/add_preset"
android:layout_centerHorizontal="true"
>
</Button>
<Button
android:id="@+id/presetSetDataButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/use_preset"
android:layout_centerHorizontal="true"
>
</Button>
<Button
android:id="@+id/presetDeleteButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/delete_preset"
android:layout_centerHorizontal="true"
>
</Button>
</LinearLayout>
</ScrollView>