<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/add_date_scrollview"
android:layout_width="fill_parent" android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
android:id="@+id/loginLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center"
>
<TextView
android:id="@+id/loginPresetLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/presets"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<Spinner
android:id="@+id/loginPresetsDd"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
>
</Spinner>
<TextView
android:id="@+id/loginURLLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/url"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/loginURLInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_url"
>
</EditText>
<TextView
android:id="@+id/loginSchoolLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/school"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/loginSchoolInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_school"
>
</EditText>
<TextView
android:id="@+id/loginUserLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/user"
android:layout_centerHorizontal="true"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/loginUserInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_user"
>
</EditText>
<TextView
android:id="@+id/loginPasswordLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/password"
android:layout_centerHorizontal="true"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<EditText
android:id="@+id/loginPasswordInput"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:ellipsize="end"
android:password="true"
android:layout_centerHorizontal="true"
android:singleLine="true"
android:hint="@string/login_hint_password"
>
</EditText>
<Button
android:id="@+id/loginButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/login"
android:layout_centerHorizontal="true"
>
</Button>
</LinearLayout>
</ScrollView>