<?xml version="1.0" encoding="utf-8"?>
<ScrollView
android:id="@+id/lessonScrollView"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<LinearLayout
android:id="@+id/selectionLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center"
>
<TextView
android:id="@+id/classesLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/classes"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<Spinner
android:id="@+id/classesDd"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
>
</Spinner>
<TextView
android:id="@+id/teacherLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/teacher"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<Spinner
android:id="@+id/teachersDd"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
>
</Spinner>
<TextView
android:id="@+id/roomsLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/rooms"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<Spinner
android:id="@+id/roomsDd"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
>
</Spinner>
<TextView
android:id="@+id/subjectsLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/subjects"
android:textSize="@dimen/subheaderFontSize"
>
</TextView>
<Spinner
android:id="@+id/subjectsDd"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
>
</Spinner>
<Button
android:id="@+id/showButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/select"
>
</Button>
</LinearLayout>
</ScrollView>