<?xml version="1.0" encoding="utf-8"?>
<ScrollView
android:id="@+id/lessonScrollView"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<RelativeLayout
android:id="@+id/lessonRelLayout"
android:layout_width="fill_parent"
android:layout_height="226px"
>
<TextView
android:id="@+id/lessonTitleLabel"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="title"
android:textSize="@dimen/lessonViewTextSize"
android:gravity="center"
/>
<TableLayout
android:id="@+id/lessonTableLayout"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_below="@+id/lessonTitleLabel"
android:orientation="vertical"
>
<TableRow
android:id="@+id/lesson_classes_tr"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:singleLine="false"
>
<TextView
android:id="@+id/lesson_classes_title"
android:layout_column="1"
android:text="@string/lessonview_class"
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
<TextView
android:id="@+id/lesson_classes_msg"
android:layout_column="2"
android:text=""
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
</TableRow>
<TableRow
android:id="@+id/lesson_teachers_tr"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:singleLine="false"
>
<TextView
android:id="@+id/lesson_teachers_title"
android:layout_column="1"
android:text="@string/lessonview_teacher"
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
<TextView
android:id="@+id/lesson_teachers_msg"
android:layout_column="2"
android:text=""
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
</TableRow>
<TableRow
android:id="@+id/lesson_subjects_tr"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:singleLine="false"
>
<TextView
android:id="@+id/lesson_subjects_title"
android:layout_column="1"
android:text="@string/lessonview_subject"
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
<TextView
android:id="@+id/lesson_subjects_msg"
android:layout_column="2"
android:text=""
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
</TableRow>
<TableRow
android:id="@+id/lesson_rooms_tr"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:singleLine="false"
>
<TextView
android:id="@+id/lesson_rooms_title"
android:layout_column="1"
android:text="@string/lessonview_room"
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
<TextView
android:id="@+id/lesson_rooms_msg"
android:layout_column="2"
android:text=""
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:singleLine="false"
/>
</TableRow>
<TableRow
android:id="@+id/lesson_type_tr"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:singleLine="false"
>
<TextView
android:id="@+id/lesson_type_title"
android:layout_column="1"
android:text="@string/lessonview_type"
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
<TextView
android:id="@+id/lesson_type_msg"
android:layout_column="2"
android:text=""
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
</TableRow>
<TableRow
android:id="@+id/lesson_code_tr"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:singleLine="false"
>
<TextView
android:id="@+id/lesson_code_title"
android:layout_column="1"
android:text="@string/lessonview_code"
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
<TextView
android:id="@+id/lesson_code_msg"
android:layout_column="2"
android:text=""
android:padding="3dip"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
/>
</TableRow>
</TableLayout>
<Button
android:id="@+id/lessonButton"
android:layout_width="fill_parent"
android:text="@string/lessonview_button"
android:layout_height="wrap_content"
android:layout_below="@+id/lessonTableLayout"
android:layout_marginTop="20px"
/>
</RelativeLayout>
</ScrollView>
